[gd_scene load_steps=7 format=3 uid="uid://cq02b4gq61ffa"]

[ext_resource type="Script" path="res://Objects/UnitMenu/UnitMenu.gd" id="1_arnfn"]
[ext_resource type="Script" path="res://Objects/UI/UnitDisplays/ManagerUnitDisplay.gd" id="1_ws15d"]
[ext_resource type="PackedScene" uid="uid://cvijuqks5beft" path="res://Assets/Meshes/Characters/Human.tscn" id="3_yqhv4"]
[ext_resource type="Script" path="res://Classes/SelfContained/PivotCamera3D.gd" id="4_66sby"]
[ext_resource type="PackedScene" uid="uid://l6u416bklps4" path="res://Objects/UI/UnitDisplays/StatDecoratedList.tscn" id="5_xbg00"]
[ext_resource type="Environment" uid="uid://cf7eiyb1unktc" path="res://DefaultEnviroment.tres" id="6_60ksk"]

[node name="UnitMenu" type="Control" node_paths=PackedStringArray("statList", "unitDisplay", "camera")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arnfn")
statList = NodePath("DecoratedList")
unitDisplay = NodePath("UnitDisplayManager")
camera = NodePath("SubViewportContainer/SubViewport/Human/PivotCamera3D")

[node name="UnitDisplayManager" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.25
script = ExtResource("1_ws15d")
metadata/_edit_use_anchors_ = true

[node name="DecoratedList" parent="." instance=ExtResource("5_xbg00")]
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.25
anchor_right = 0.6
anchor_bottom = 1.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(460, 501)
render_target_update_mode = 4

[node name="Human" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_yqhv4")]

[node name="PivotCamera3D" type="Node3D" parent="SubViewportContainer/SubViewport/Human"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
script = ExtResource("4_66sby")
minZoom = 0.85
defaultRotation = Vector3(0, 0, 0)
cameraPos = Vector3(0, 0, 0.1)
fov = 60.0
controlsActive = false

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 2.37132, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("6_60ksk")
